--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
                                         fill="white" stroke="white" stroke-width="0.5" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -868,7 +868,7 @@
                                         fill="white" stroke="white" stroke-width="0.5" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -901,7 +901,7 @@
                                         fill="white" stroke="white" stroke-width="0.5" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -934,7 +934,7 @@
                                         fill="white" stroke="white" stroke-width="0.5" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -967,7 +967,7 @@
                                         fill="white" stroke="white" stroke-width="0.5" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -1000,7 +1000,7 @@
                                         fill="white" stroke="white" stroke-width="0.5" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -1033,7 +1033,7 @@
                                         fill="white" stroke="white" stroke-width="0.5" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -1066,7 +1066,7 @@
                                         fill="white" stroke="white" stroke-width="0.5" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -1099,7 +1099,7 @@
                                         fill="white" stroke="white" stroke-width="0.5" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -1132,7 +1132,7 @@
                                         fill="white" stroke="white" stroke-width="0.5" />
                                 </svg>
                             </span>
-                            <span class="svg_icon">
+                            <span class="svg_icon d-flex align-items-center justify-content-center">
                                 <svg width="22" height="23" viewBox="0 0 22 23" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
