--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- header -->
 
-    <header class="header_bgImg min-vh-lg-100 py-header min-h-max-lg">
+    <header class="header_bgImg min-vh-lg-100 py-header min-h-max-lg h-min-xxxl">
         <div class="container_hero pt-3 overflow-hidden">
             <div class="d-flex align-items-center justify-content-between move">
                 <div class="d-flex align-items-center gap_media_loc">
@@ -322,7 +322,7 @@
 
         <!-- second cloud image -->
 
-        <div class="position-relative w-100 pos-cloud-bottom-about w-h-change-cloud-2 bg-about-clr">
+        <div class="position-relative w-100 pos-cloud-bottom-about w-h-change-cloud-2 bg-about-clr -mt-1px">
             <img src="./assets/Images/PNG/top-cloud-img.png" alt="cloud-top-img" class="w-100 h-change">
         </div>
 
@@ -808,7 +808,8 @@
         <!-- second cloud image -->
 
         <div class="position-relative w-100 pos-cloud-bottom-about w-h-change-cloud-2 bg-white">
-            <img src="./assets/Images/PNG/tema-bottom-layer.png" alt="cloud-top-img" class="w-100 h-100">
+            <img src="./assets/Images/PNG/bottom-cloud -team-section.png" alt="cloud-top-img"
+                class="w-100 h-100 opacity-50">
         </div>
 
         <!-- main-content faq section -->
@@ -1121,7 +1122,7 @@
                 <div class="question_box">
                     <p class="fm-acumin fw-700 fs-24 lh-32 text-clr fs-ques-box-text">Have a Different Question? Contact
                         Us Today</p>
-                    <textarea class="w-100 rounded-3 text-area-box fm-acumin fw-400 fs-16 lh-24 p-3"
+                    <textarea class="w-100 rounded-3 text-area-box fm-acumin fw-400 fs-16 lh-24 p-3 outline-none"
                         style="resize: none;" placeholder="Type Something..."></textarea>
                     <button class="btns fm-acumin fw-700 fs-16 lh-19 text-white">Submit Now</button>
                 </div>
@@ -1158,7 +1159,7 @@
         <!-- cloud image -->
 
         <div class="position-relative w-100 pos-cloud-bottom-about w-h-change-cloud bg-white">
-            <img src="./assets/Images/PNG/slogan-bottom-cloud-img.png" alt="cloud-bottom-img" class="w-100 h-100">
+            <img src="./assets/Images/PNG/bottom-cloud-slogan-section.png" alt="cloud-bottom-img" class="w-100 h-100">
         </div>
 
 
@@ -1417,10 +1418,44 @@
                 depth: 150,
                 modifier: 1.5,
                 slideShadows: false,
+            },
+            breakpoints: {
+                768: {
+                    slidesPerView: 2.5,
+                    coverflowEffect: {
+                        rotate: 0,
+                        stretch: 100,
+                        depth: 150,
+                        modifier: 1.5,
+                        slideShadows: false,
+                    }
+                },
+                576: {
+                    slidesPerView: 2,
+                    spaceBetween: 30,
+                    coverflowEffect: {
+                        rotate: 0,
+                        stretch: 0,
+                        depth: 0,
+                        modifier: 1,
+                        slideShadows: false,
+                    }
+                },
+                320: {
+                    spaceBetween: 30,
+                    slidesPerView: 1,
+                    coverflowEffect: {
+                        rotate: 0,
+                        stretch: 0,
+                        depth: 0,
+                        modifier: 1,
+                        slideShadows: false,
+                    }
+                }
             }
         });
-
     </script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
