--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
                                 Cleaning</p>
                         </div>
 
-                        <p class="fm-acumin fw-400 fs-16 lh-24 text-clr opacity-70">No need to be overwhelmed by the
+                        <p class="fm-acumin fw-400 fs-16 lh-24 text-clr opacity-70 mb-0">No need to be overwhelmed by
+                            the
                             thought of harsh chemicals and abrasive cleaning methods.
                             Our dry ice blasting leaves
                             your car spotless, reaching where no cloth can.</p>
@@ -181,7 +182,7 @@
                             </div>
                         </div>
 
-                        <div class="d-flex align-items-start gap-3 mt-4">
+                        <div class="d-flex align-items-start gap-3 mt-lg-4 mt-sm-2 mt-0">
                             <span>
                                 <img src="./assets/Images/SVG/tick-about-us.svg" alt="tick-about-us">
                             </span>
@@ -410,7 +411,7 @@
             <!-- middle section -->
 
             <section class="h-bts-sec">
-                <div class="container_hero">
+                <div class="container_hero max-w-choose-sec">
                     <div class="d-flex align-items-center justify-content-center">
                         <p
                             class="fm-titling fw-700 mb-0 fs-48 lh-56 text-white text-center main-heading-media max-w-bts-main-text">
@@ -689,7 +690,7 @@
 
         <!-- main content -->
 
-        <section class="bg-about-clr">
+        <section class="bg-about-clr pb-4">
             <div class="container_hero position-relative">
                 <p
                     class="fm-titling fw-700 mb-0 pb-media-latest-text fs-48 lh-56 text-white text-center main-heading-media">
@@ -721,12 +722,6 @@
                         </div>
                         <div class="swiper-slide gallery-slide">
                             <img src="./assets/Images/PNG/latest-img-3.png" alt="">
-                        </div>
-                        <div class="swiper-slide gallery-slide">
-                            <img src="./assets/Images/PNG/latest-img-4.png" alt="">
-                        </div>
-                        <div class="swiper-slide gallery-slide">
-                            <img src="./assets/Images/PNG/slider-right-last-img.png" alt="">
                         </div>
                     </div>
                     <div class="swiper-actions d-xl-none d-flex">
@@ -775,7 +770,7 @@
                             <img src="./assets/Images/PNG/team-col-img-full.png" alt="team memeber image"
                                 class="w-100 h-100 d-xxl-flex d-none">
                             <img src="./assets/Images/PNG/team-max-lg-img.png" alt="random person img"
-                                class="w-100 h-100 d-xxl-none d-flex">
+                                class="w-100 h-100 d-xxl-none d-flex w-change-team-sec">
                         </div>
                     </div>
                     <div class="col-lg-7 ps-4 d-flex flex-column align-items-start justify-content-center">
@@ -1435,9 +1430,9 @@
                     spaceBetween: 30,
                     coverflowEffect: {
                         rotate: 0,
-                        stretch: 0,
-                        depth: 0,
-                        modifier: 1,
+                        stretch: 100,
+                        depth: 150,
+                        modifier: 1.5,
                         slideShadows: false,
                     }
                 },
