--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.2.0/swiper-bundle.min.css">
     <link rel="stylesheet" href="./assets/CSS/root.css">
     <link rel="shortcut icon" href="./assets/Images/SVG/page_logo.svg" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -152,7 +153,8 @@
         <section class="back_layer_about py-about-us pb-media-about-sec" id="about">
             <div class="container_hero max-w-about-us-cont">
                 <div class="row">
-                    <div class="col-lg-6 d-flex align-items-start justify-content-center flex-column pe-lg-4">
+                    <div class="col-lg-6 d-flex align-items-start justify-content-center flex-column pe-lg-4"
+                        data-aos="fade-right">
 
                         <div class="d-flex align-items-start justify-content-center">
                             <p class="fm-titling fw-700 fs-48 lh-56 text-clr max-w-about-main-text">The Future of Car
@@ -232,7 +234,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 position-relative d-max-lg-none video_box overflow-hidden px-0">
+                    <div class="col-lg-6 position-relative d-max-lg-none video_box overflow-hidden px-0"
+                        data-aos="fade-left">
                         <div class="position-absolute translate-middle start-50 top-50 z-1 video_play cursor">
                             <img src="./assets/Images/SVG/play_btn-svg.svg" alt="play btn">
                         </div>
@@ -336,7 +339,8 @@
                     Car?
                 </p>
                 <div class="row">
-                    <div class="col-lg-6 d-flex flex-column align-items-start justify-content-center">
+                    <div class="col-lg-6 d-flex flex-column align-items-start justify-content-center"
+                        data-aos="flip-left">
                         <div class="d-flex align-items-center gap-media-choose-text">
                             <div class="d-flex align-items-center justify-content-center">
                                 <img src="./assets/Images/PNG/why-choose-us-small-img-1.png" alt="car images"
@@ -388,7 +392,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 mt-lg-0 mt-4">
+                    <div class="col-lg-6 mt-lg-0 mt-4" data-aos="flip-right">
                         <div class="d-flex align-items-center justify-content-center">
                             <img src="./assets/Images/PNG/choose-us-col-img.png" alt="why choose us col image"
                                 class="w-100 h-100">
@@ -426,7 +430,7 @@
                             delivering immaculate
                             results every time.</p>
                     </div>
-                    <div class="position-relative video_box overflow-hidden">
+                    <div class="position-relative video_box overflow-hidden" data-aos="flip-up">
                         <div class="position-absolute translate-middle start-50 top-50 z-1 video_play cursor">
                             <img src="./assets/Images/SVG/play_btn-svg.svg" alt="play btn">
                         </div>
@@ -479,8 +483,8 @@
                         – we'll always give you a straight price, customised to your car's needs.</p>
                 </div>
                 <div class="accord d-flex flex-column align-items-center justify-content-center w-100">
-                    <div
-                        class="accordion-items w-100 d-flex flex-lg-row flex-column align-items-baseline p-accordion justify-content-between">
+                    <div class="accordion-items w-100 d-flex flex-lg-row flex-column align-items-baseline p-accordion justify-content-between"
+                        data-aos="flip-down">
                         <div
                             class="d-flex align-items-lg-baseline align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p
@@ -525,8 +529,8 @@
                         </span>
                     </div>
 
-                    <div
-                        class="accordion-items flex-lg-row flex-column accord-2 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc">
+                    <div class="accordion-items flex-lg-row flex-column accord-2 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc"
+                        data-aos="flip-down">
                         <div
                             class="d-flex align-items-lg-baseline align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -569,8 +573,8 @@
                         </span>
                     </div>
 
-                    <div
-                        class="accordion-items flex-lg-row flex-column accord-3 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc">
+                    <div class="accordion-items flex-lg-row flex-column accord-3 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc"
+                        data-aos="flip-down">
                         <div
                             class="d-flex align-items-lg-baseline align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -615,8 +619,8 @@
                         </span>
                     </div>
 
-                    <div
-                        class="accordion-items flex-lg-row flex-column accord-4 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc">
+                    <div class="accordion-items flex-lg-row flex-column accord-4 w-100 d-flex align-items-baseline p-accordion justify-content-between mt-media-acc"
+                        data-aos="flip-down">
                         <div
                             class="d-flex align-items-lg-baseline align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-28 lh-39 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -815,8 +819,8 @@
                     Still Unsure? Check Out These FAQs</p>
                 <div class="accord d-flex flex-column align-items-center justify-content-center w-100">
 
-                    <div
-                        class="accordion-items w-100 d-flex flex-column align-items-baseline p-accordion justify-content-between">
+                    <div class="accordion-items w-100 d-flex flex-column align-items-baseline p-accordion justify-content-between"
+                        data-aos="flip-up">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p
@@ -849,8 +853,8 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div
-                        class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
+                        data-aos="flip-up">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -882,8 +886,8 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div
-                        class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
+                        data-aos="flip-up">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -915,8 +919,8 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div
-                        class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
+                        data-aos="flip-up">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -948,8 +952,8 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div
-                        class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
+                        data-aos="flip-up">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">Is
@@ -981,8 +985,8 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div
-                        class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
+                        data-aos="flip-up">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">How
@@ -1014,8 +1018,8 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div
-                        class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
+                        data-aos="flip-up">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">Can
@@ -1047,8 +1051,8 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div
-                        class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
+                        data-aos="flip-up">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">
@@ -1080,8 +1084,8 @@
                             applications across various industries.</p>
                     </div>
 
-                    <div
-                        class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc">
+                    <div class="accordion-items flex-column w-100 d-flex align-items-center p-accordion justify-content-between mt-media-acc"
+                        data-aos="flip-up">
                         <div
                             class="d-flex align-items-center flex-row max-w-accord-item justify-content-between gap-media-accordion w-100 click-btn">
                             <p class="fm-acumin fw-700 fs-24 lh-32 text-clr accord-head mb-0 fs-accordion-main-text">Are
@@ -1170,7 +1174,7 @@
                     innovation in car care.</p>
                 <div class="row align-items-center justify-content-center">
                     <div class="col-lg-4 col-sm-6 d-flex align-items-center justify-content-center">
-                        <div class="insight-box">
+                        <div class="insight-box" data-aos="flip-left">
                             <div>
                                 <img src="./assets/Images/PNG/insight-col-img-1.png" alt="random images" class="w-100">
                             </div>
@@ -1181,7 +1185,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mt-md-0 mt-3 d-flex align-items-center justify-content-center">
-                        <div class="insight-box">
+                        <div class="insight-box" data-aos="flip-right">
                             <div>
                                 <img src="./assets/Images/PNG/insight-col-img-2.png" alt="random images" class="w-100">
                             </div>
@@ -1192,7 +1196,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mt-lg-0 mt-4 d-flex align-items-center justify-content-center">
-                        <div class="insight-box">
+                        <div class="insight-box" data-aos="flip-left">
                             <div>
                                 <img src="./assets/Images/PNG/insight-col-img-3.png" alt="random images" class="w-100">
                             </div>
@@ -1392,6 +1396,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.2.0/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         var gallerySlider = new Swiper('.gallery-slider', {
             pagination: {
