--- a/index.html
+++ b/index.html
@@ -704,28 +704,28 @@
                 <div class="swiper gallery-slider">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide gallery-slide">
-                            <img src="./assets/Images/PNG/slick-slider-img-1.png" alt="">
+                            <img src="./assets/Images/PNG/slick-slider-img-1.png" alt="random car images">
                         </div>
                         <div class="swiper-slide gallery-slide">
-                            <img src="./assets/Images/PNG/slick-slider-img-2.png" alt="">
+                            <img src="./assets/Images/PNG/slick-slider-img-2.png" alt="random car images">
                         </div>
                         <div class="swiper-slide gallery-slide">
-                            <img src="./assets/Images/PNG/latest-img-3.png" alt="">
+                            <img src="./assets/Images/PNG/latest-img-3.png" alt="random car images">
                         </div>
                         <div class="swiper-slide gallery-slide">
-                            <img src="./assets/Images/PNG/latest-img-4.png" alt="">
+                            <img src="./assets/Images/PNG/latest-img-4.png" alt="random car images">
                         </div>
                         <div class="swiper-slide gallery-slide">
-                            <img src="./assets/Images/PNG/latest-5.png" alt="">
+                            <img src="./assets/Images/PNG/latest-5.png" alt="random car images">
                         </div>
                         <div class="swiper-slide gallery-slide">
-                            <img src="./assets/Images/PNG/slider-right-last-img.png" alt="">
+                            <img src="./assets/Images/PNG/slider-right-last-img.png" alt="random car images">
                         </div>
                         <div class="swiper-slide gallery-slide">
-                            <img src="./assets/Images/PNG/slick-slider-img-1.png" alt="">
+                            <img src="./assets/Images/PNG/slick-slider-img-1.png" alt="random car images">
                         </div>
                         <div class="swiper-slide gallery-slide">
-                            <img src="./assets/Images/PNG/latest-img-3.png" alt="">
+                            <img src="./assets/Images/PNG/latest-img-3.png" alt="random car images">
                         </div>
                     </div>
                     <div class="swiper-actions d-xl-none d-flex">
